--- a/web-app/css/monitor.css
+++ b/web-app/css/monitor.css
@@ -10,3 +10,7 @@ th.asc a {
 th.desc a {
     background-image: url(../images/skin/sorted_desc.gif);
 }
+
+.right {
+    text-align: right !important;
+}
